tests/variable/redeclare_global.rev
var a = "1"
var a // error: variable 'a' is already declared